# logParser

./: SAMPLE.py  example.py  example2.py  output_file_logs.csv  output_file_logs.json  output_single_log.csv  output_single_log.json
log_parser_sdk/: README.md  __init__.py  claude_client.py  error_handler.py  input_handler.py  log_parser.py  output_formatter.py  setup.cfg
log_parser_sdk/log_parser_sdk.egg-info/: PKG-INFO  SOURCES.txt
log_parser_sdk/tests/: test_claude_client.py  test_error_handler.py  test_input_handler.py  test_log_parser.py  test_output_formatter.py
raw_logs/: fw_logs.txt  unix_logs.txt
