[metadata]
name = log_parser_sdk
version = 0.1.0
author = Manus
author_email = manus@example.com
description = A SDK for parsing security logs using GenAI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manus/log_parser_sdk # Replace with actual repository URL
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    requests

[options.packages.find]
exclude =
    tests*
    examples*


